<resources>
    <string name="app_name">Genshin Spirit</string>
    <string name="title_char">Characters</string>
    <string name="title_artifacts">Artifacts</string>
    <string name="title_home">Home</string>
    <string name="title_weapons">Weapons</string>
    <string name="title_settings">Settings</string>
    <string name="dow_set1">Mon,Thur,Sun</string>
    <string name="dow_set2">Tue,Fri,Sun</string>
    <string name="dow_set3">Wed,Sat,Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="teaching_of_ballad">Teachings of Ballad</string>
    <string name="teaching_of_diligence">Teachings of Diligence</string>
    <string name="teaching_of_freedom">Teachings of Freedom</string>
    <string name="teaching_of_gold">Teachings of Gold</string>
    <string name="teaching_of_prosperity">Teachings of Prosperity</string>
    <string name="teaching_of_resistance">Teachings of Resistance</string>
    <string name="teachings_of_elegance">Teachings of Elegance</string>
    <string name="teachings_of_light">Teachings of Light</string>
    <string name="teachings_of_transience">Teachings of Transience</string>
    <string name="guide_of_freedom">Guide to Freedom</string>
    <string name="guide_of_gold">Guide to Gold</string>
    <string name="guide_of_resistance">Guide to Resistance</string>
    <string name="guide_of_prosperity">Guide to Prosperity</string>
    <string name="guide_of_ballad">Guide to Ballad</string>
    <string name="guide_of_diligence">Guide to Diligence</string>
    <string name="guides_of_elegance">Guide to Elegance</string>
    <string name="guides_of_transience">Guide to Transience</string>
    <string name="guides_of_light">Guide to Light</string>
    <string name="philosophies_of_freedom">Philosophies of Freedom</string>
    <string name="philosophies_of_gold">Philosophies of Gold</string>
    <string name="philosophies_of_resistance">Philosophies of Resistance</string>
    <string name="philosophies_of_prosperity">Philosophies of Prosperity</string>
    <string name="philosophies_of_ballad">Philosophies of Ballad</string>
    <string name="philosophies_of_diligence">Philosophies of Diligence</string>
    <string name="philosophiess_of_elegance">Philosophiess of Elegance</string>
    <string name="philosophiess_of_transience">Philosophiess of Transience</string>
    <string name="philosophiess_of_light">Philosophiess of Light</string>
    <string name="tile_of_decarabians_tower">Tile of Decarabians Tower</string>
    <string name="luminous_sands_from_guyun">Luminous Sands from guyun</string>
    <string name="coral_branch_of_a_distant_sea">Coral branch of a distant sea</string>
    <string name="mist_veiled_lead_elixir">Mist veiled lead elixir</string>
    <string name="boreal_wolfs_milk_tooth">Boreal wolfs milk tooth</string>
    <string name="narukamis_wisdom">Narukamis wisdom</string>
    <string name="grain_of_aerosiderite">Grain of aerosiderite</string>
    <string name="fetters_of_the_dandelion_gladiator">Fetters of the dandelion gladiator</string>
    <string name="mask_of_the_wicked_lieutenant">Mask of the wicked lieutenant</string>
    <string name="kamisato_ayato">Kamisato Ayato</string>
    <string name="aloy">Aloy</string>
    <string name="kujou_sara">Kujou Sara</string>
    <string name="sangonomiya_kokomi">Sangonomiya Kokomi</string>
    <string name="raiden_shogun">Raiden Shogun</string>
    <string name="sayu">Sayu</string>
    <string name="yoimiya">Yoimiya</string>
    <string name="kamisato_ayaka">Kamisato Ayaka</string>
    <string name="kaedehara_kazuha">Kaedehara Kazuha</string>
    <string name="yanfei">Yanfei</string>
    <string name="eula">Eula</string>
    <string name="rosaria">Rosaria</string>
    <string name="xiao">Xiao</string>
    <string name="hu_tao">Hu Tao</string>
    <string name="ganyu">Ganyu</string>
    <string name="albedo">Albedo</string>
    <string name="zhongli">Zhongli</string>
    <string name="xinyan">Xinyan</string>
    <string name="tartaglia">Tartaglia</string>
    <string name="diona">Diona</string>
    <string name="xingqiu">Xingqiu</string>
    <string name="xiangling">Xiangling</string>
    <string name="venti">Venti</string>
    <string name="traveler_anemo">Traveler(Anemo)</string>
    <string name="traveler_geo">Traveler(Geo)</string>
    <string name="traveler_electro">Traveler(Electro)</string>
    <string name="sucrose">Sucrose</string>
    <string name="razor">Razor</string>
    <string name="qiqi">Qiqi</string>
    <string name="noelle">Noelle</string>
    <string name="ningguang">Ningguang</string>
    <string name="mona">Mona</string>
    <string name="lisa">Lisa</string>
    <string name="klee">Klee</string>
    <string name="keqing">Keqing</string>
    <string name="kaeya">Kaeya</string>
    <string name="jean">Jean</string>
    <string name="fischl">Fischl</string>
    <string name="diluc">Diluc</string>
    <string name="chongyun">Chongyun</string>
    <string name="bennett">Bennett</string>
    <string name="beidou">Beidou</string>
    <string name="barbara">Barbara</string>
    <string name="amber">Amber</string>
    <string name="unknown">unknown</string>
    <string name="thoma">Thoma</string>
    <string name="gorou">Gorou</string>
    <string name="arataki_itto">Arataki Itto</string>
    <string name="yae_miko">Yae Miko</string>
    <string name="search">Search...</string>
    <string name="elements">Element</string>
    <string name="rarity">Rarity</string>
    <string name="filters">Filters</string>
    <string name="mondstadt">Mondstadt</string>
    <string name="liyue">Liyue</string>
    <string name="inazuma">Inazuma</string>
    <string name="main_dps">Main</string>
    <string name="support_dps">Support</string>
    <string name="utility">Utility</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="set_by_player">Set by player</string>
    <string name="another_world">Another World</string>
    <string name="district">District</string>
    <string name="weapon">Weapon</string>
    <string name="char_role">Role</string>
    <string name="sex">Sex</string>
    <string name="birth">Birth</string>
    <string name="intro">Intro</string>
    <string name="battle_talent">Battle Talent</string>
    <string name="noraml_atk">Normal ATK</string>
    <string name="charged_atk">Charged ATK</string>
    <string name="plunging_atk">Plunging ATK</string>
    <string name="element_atk">Elemental Skill</string>
    <string name="final_atk">Elemental Burst</string>
    <string name="basic_talent">Passive Talent</string>
    <string name="asc0_unlock">Utility Passive</string>
    <string name="asc1_unlock">1st Ascension Passive</string>
    <string name="asc4_unlock">4th Ascension Passive</string>
    <string name="sof">Constellation</string>
    <string name="sof1">Level 1</string>
    <string name="sof2">Level 2</string>
    <string name="sof3">Level 3</string>
    <string name="sof4">Level 4</string>
    <string name="sof5">Level 5</string>
    <string name="sof6">Level 6</string>
    <string name="advice">Advice</string>
    <string name="team_advice">Team Advice</string>
    <string name="weapon_advice">Weapon Advice</string>
    <string name="art_advice">Artifacts Advice</string>
    <string name="none_info">There is no relevant information about them at the moment</string>
    <string name="weapon_stat">"Sub. attr : "</string>
    <string name="weapon_stat_atk">"ATK"</string>
    <string name="weapon_stat_DEF">"DEF"</string>
    <string name="weapon_stat_HP">"HP"</string>
    <string name="weapon_stat_atkP">"ATK %"</string>
    <string name="weapon_stat_CritDMGP">"CRIT DMG %"</string>
    <string name="weapon_stat_CritRateP">"CRIT Rate %"</string>
    <string name="weapon_stat_PhyDMGP">"Physical DMG %"</string>
    <string name="weapon_stat_EnRechP">"Energy Recharge %"</string>
    <string name="weapon_stat_EleMas">"Elemental Mastery"</string>
    <string name="weapon_stat_DEFP">"DEF %"</string>
    <string name="weapon_stat_HPP">"HP %"</string>
    <string name="weapon_stat_no">"N/A"</string>
    <string name="artifact_stat1">1 Piece</string>
    <string name="artifact_stat2">2 Piece(s)</string>
    <string name="artifact_stat4">4 Piece(s)</string>
    <string name="alarm_t1">Boss</string>
    <string name="alarm_t2">Resin</string>
    <string name="alarm_t3">Realm Currency</string>
    <string name="alarm_t4">Expedition</string>
    <string name="alarm_t5">Custom</string>
    <string name="alarm_time1">4hrs</string>
    <string name="alarm_time2">8hrs</string>
    <string name="alarm_time3">12hrs</string>
    <string name="alarm_time4">20hrs</string>
    <string name="jb_title">[Genshin Spirit] Hi ~ It\'s time to do a Boss Mission!</string>
    <string name="common_info">Don\'t forget to do it before it resets</string>
    <string name="daily_mission_title">[Genshin Spirit] Hi ~ Have you finished the Daily Missions yet?</string>
    <string name="dtbc_title">[Genshin Spirit] Hi ~ Your Realm Currency is full, remember to claim it ~</string>
    <string name="ph_title">[Genshin Spirit] Hi ~ the Expedition has been finished</string>
    <string name="ph_info">Let\'s see what they found ~</string>
    <string name="dtbc_info">Ehm... If you don\'t need them, then I will take them away ~</string>
    <string name="resin_title">[Genshin Spirit] Hi ~ Your Resin has been maxed out, remember to use it~</string>
    <string name="edit_title">Edit alarm</string>
    <string name="edit_type">Type</string>
    <string name="edit_time">Time</string>
    <string name="edit_ph_time">Expedition Duration</string>
    <string name="edit_adeptal_energy">Adeptal Energy</string>
    <string name="edit_trust_rank">Trust Rank</string>
    <string name="edit_title_notif">Title</string>
    <string name="edit_info_notif">Info</string>
    <string name="edit_cd_25off">25% CD off</string>
    <string name="edit_use_notif">Use this alarm</string>
    <string name="america_ser">America</string>
    <string name="europe_ser">Europe</string>
    <string name="asia_ser">Asia</string>
    <string name="hk_tw_mo_ser">HK, TW, MO</string>
    <string name="genshinhelper_link" translatable="false"><a href="https://github.com/Vocaloid2048/GenshinHelper">★ Genshin Spirit Github</a></string>
    <string name="genshinhelper_dclink" translatable="false"><a href="https://discord.gg/uXatcbWKv2">★ Genshin Spirit Discord Server</a></string>
    <string name="genshindb_dclink" translatable="false"><a href="https://discord.com/invite/rztDRXnnDj">★ Shiroi Discord Server</a></string>
    <string name="result">Result</string>
    <string name="cal_reset">Reset</string>
    <string name="buff">BUFF</string>
    <string name="shiroi_link" translatable="false"><a href="https://github.com/Wolfteam/Shiori">★ Shiroi for Genshin </a></string>
    <string name="honey_impact_link" translatable="false"><a href="https://genshin.honeyhunterworld.com/">★ Honey Impact</a></string>
    <string name="bwiki_link" translatable="false"><a href="https://wiki.biligame.com/ys">★ Bilibili - 原神WIKI</a></string>
    <string name="wiki_4399_link" translatable="false"><a href="http://news.4399.com/yssy/">★ 4399 - 原神攻略</a></string>
    <string name="fandom_link" translatable="false"><a href="https://genshin-impact.fandom.com/wiki/">★ Fandom - Genshin Impact Wiki</a></string>
    <string name="these_is_rss_source">"These are the sources for Genshin Spirit's information(data, images, etc.)."</string>
    <string name="press_open_link">"Press to open website"</string>
    <string name="genshin_cal_link" translatable="false"><a href="https://play.google.com/store/apps/details?id=com.dfsly.genshin">★ Genshin Calculator By dfsly</a></string>
</resources>