<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Project Genshin Spirit (原神小幫手) was
  ~ Created & Develop by Voc-夜芷冰 , Programmer of Xectorda
  ~ Copyright © 2022 Xectorda 版權所有
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/klee_ico" android:id="@+id/navigation_klee" android:title="@string/klee"/>
    <item android:icon="@drawable/ayaka_ico" android:id="@+id/navigation_ayaka" android:title="@string/kamisato_ayaka"/>
    <item android:icon="@drawable/hu_tao_ico" android:id="@+id/navigation_hu_tao" android:title="@string/hu_tao"/>
    <item android:icon="@drawable/yae_miko_ico" android:id="@+id/navigation_yae_miko" android:title="@string/yae_miko"/>
    <item android:icon="@drawable/hu_tao_unknown" android:id="@+id/navigation_paimon_lost" android:title="@string/unknown"/>
</menu>
