<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Package C:/Users/Vocaloid2048/Desktop/File/App/GenshinHelper/app/src/main/res/menu/bottom_nav_menu.xml was
  ~ Created by Voc-夜芷冰 , Programmer of Xectorda
  ~ Copyright © 2021 Xectorda 版權所有
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_char"
        android:icon="@drawable/ic_baseline_people_24"
        android:title="@string/title_char" />
    <item
        android:id="@+id/navigation_artifacts"
        android:icon="@drawable/artifacts_ico"
        android:title="@string/title_artifacts" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_weapons"
        android:icon="@drawable/weapons_ico"
        android:title="@string/title_weapons" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/title_settings" />

</menu>