<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Project Genshin Spirit (原神小幫手) was
  ~ Created & Develop by Voc-夜芷冰 , Programmer of Xectorda
  ~ Copyright © 2023 Xectorda 版權所有
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:id="@+id/helper_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/gone_background"
        app:cardBackgroundColor="@color/colorWhiteAlpha"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/helper_thanks_intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/genshin_font"
                android:text="@string/these_is_rss_source"
                android:textAlignment="center"
                android:textColor="@color/tv_color"
                android:textSize="14sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/helper_thanks_intro2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/genshin_font"
                android:text="@string/press_open_link"
                android:textAlignment="center"
                android:textColor="@color/tv_color"
                android:textSize="14sp"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/genshin_font"
                    android:text="@string/shiroi_link"
                    android:textColor="@color/tv_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/genshin_font"
                    android:text="@string/honey_impact_link"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/genshin_font"
                    android:text="@string/fandom_link"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/genshin_font"
                    android:text="@string/bwiki_link"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView39"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/genshin_font"
                    android:text="@string/wiki_4399_link"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView43"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/genshin_font"
                    android:text="@string/genshinhelper_link"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView44"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/genshin_font"
                    android:text="@string/genshin_cal_link"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/helper_beta_tester_title2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/genshin_font"
                    android:text="Discord Server"
                    android:textColor="@color/tv_color"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/textView40"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/genshin_font"
                    android:text="@string/genshindb_dclink"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/textView41"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/genshin_font"
                    android:text="@string/genshinhelper_dclink"
                    android:textSize="16sp"
                    android:visibility="gone" />

            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>