<?xml version="1.0" encoding="utf-8"?><!--
  ~ Package E:/GenshinSpirit/GenshinSpirit/app/src/main/res/layout/item_buff_artifact.xml was
  ~ Created by Voc-夜芷冰 , Programmer of Xectorda
  ~ Copyright © 2021 Xectorda 版權所有
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="4dp"
        android:background="@drawable/bg_kwang_light"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/buff_artifact_main_value"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/jf_openhuninn"
            android:gravity="center"
            android:text="4,780" />

        <TextView
            android:id="@+id/buff_artifact_main_name"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:fontFamily="@font/jf_openhuninn"
            android:gravity="center|left"
            android:text="@string/weapon_stat_HP" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="4dp"
        android:background="@drawable/bg_kwang_light"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/buff_artifact_sec1_value"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/jf_openhuninn"
            android:gravity="center"
            android:text="3.9%" />

        <TextView
            android:id="@+id/buff_artifact_sec1_name"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:fontFamily="@font/jf_openhuninn"
            android:gravity="center|left"
            android:text="@string/weapon_stat_CritRateP" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="4dp"
        android:background="@drawable/bg_kwang_light"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/buff_artifact_sec2_value"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/jf_openhuninn"
            android:gravity="center"
            android:text="12.0%" />

        <TextView
            android:id="@+id/buff_artifact_sec2_name"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:fontFamily="@font/jf_openhuninn"
            android:gravity="center|left"
            android:text="@string/weapon_stat_CritDMGP" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="4dp"
        android:background="@drawable/bg_kwang_light"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/buff_artifact_sec3_value"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/jf_openhuninn"
            android:gravity="center"
            android:text="12.2%" />

        <TextView
            android:id="@+id/buff_artifact_sec3_name"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:fontFamily="@font/jf_openhuninn"
            android:gravity="center|left"
            android:text="@string/weapon_stat_atkP" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="4dp"
        android:background="@drawable/bg_kwang_light"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/buff_artifact_sec4_value"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/jf_openhuninn"
            android:gravity="center"
            android:text="256" />

        <TextView
            android:id="@+id/buff_artifact_sec4_name"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:fontFamily="@font/jf_openhuninn"
            android:gravity="center|left"
            android:text="@string/weapon_stat_atk" />
    </LinearLayout>
</LinearLayout>