<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Project Genshin Spirit (原神小幫手) was
  ~ Created & Develop by Voc-夜芷冰 , Programmer of Xectorda
  ~ Copyright © 2023 Xectorda 版權所有
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@color/page_bg" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="4dp" android:layout_marginBottom="4dp">
        <ImageView android:id="@+id/menu_filter_ico" android:layout_width="48dp" android:layout_height="48dp" android:layout_weight="0" app:srcCompat="@drawable/ic_baseline_filter_alt_24"/>
        <TextView android:textSize="20sp" android:textColor="@color/tv_color" android:gravity="left|center_vertical|center_horizontal|center" android:id="@+id/menu_title_tv" android:layout_width="match_parent" android:layout_height="48dp" android:text="@string/filters" android:layout_weight="0"/>
    </LinearLayout>

    <TextView
        android:id="@+id/menu_rarity_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical|center_horizontal|center"
        android:paddingLeft="16dp"
        android:text="@string/rarity"
        android:textColor="@color/tv_color"
        android:textSize="16sp" />

    <RatingBar
        android:id="@+id/menu_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:isIndicator="false"
        android:numStars="5"
        android:progressDrawable="@drawable/rating_bar"
        android:rating="0"
        android:stepSize="1" />

    <LinearLayout android:gravity="right" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <Button android:textColor="@color/theme_color" android:id="@+id/menu_cancel" android:background="@drawable/bg_square_border" android:layout_width="72dp" android:layout_height="36dp" android:layout_margin="4dp" android:text="@android:string/cancel" android:layout_weight="0"/>

        <Button
            android:id="@+id/menu_reset"
            android:layout_width="72dp"
            android:layout_height="36dp"
            android:layout_margin="4dp"
            android:layout_weight="0"
            android:background="@drawable/bg_square_border"
            android:text="@string/cal_reset"
            android:textColor="@color/theme_color" />

        <Button
            android:id="@+id/menu_ok"
            android:layout_width="72dp"
            android:layout_height="36dp"
            android:layout_margin="4dp"
            android:layout_weight="0"
            android:background="@drawable/bg_square_border_colorful"
            android:text="@android:string/ok"
            android:textColor="@color/tv_color" />
    </LinearLayout>
</LinearLayout>
